checking stl architecture

--- a/en.properties
+++ b/en.properties
@@ -1,4 +1,3 @@
----Mandatoryfieldmessage---
 CustomerCategory = Customer Category
 IDType = Personal Id Type
 CityLbl = City
@@ -9,3 +8,6 @@ Local = Local
 NationalID = National ID
 Nyala = Nyala
 Link = Link
+PersonalIdFront = PersonalId Front
+PersonalIdBack = PersonalId Back
+planName = Plan Name
